[package]
name = "kaw"
version = "0.1.2"
edition = "2021"

[dependencies]
deno_core = { version="0.311.0", default-features = false }
tokio = { version = "1.40.0", default-features = false }

[dev-dependencies]
assert_cmd = "2.0.16"

[build-dependencies]
deno_core = "0.311.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
